adding docs and Diagram

--- a/SharpProg.Tutorials.AzureB2C/src/SharpProg.Tutorials.AzureB2C.WebClient/appsettings.json
+++ b/SharpProg.Tutorials.AzureB2C/src/SharpProg.Tutorials.AzureB2C.WebClient/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://carbonx1.b2clogin.com", //Replace 'tenant-name' with Azure AD B2C tenant name
-    "Domain": "carbonx1.onmicrosoft.com", //Replace 'tenant-name' with Azure AD B2C tenant name
-    "ClientId": "a56db7cd-ad4c-4da1-a70a-fd24a8430a57", //Azure AD B2C Products.WebClient App registration client id
-    "ClientSecret": "n5j8Q~RtpR4gcTgEDbSfTHSyJjV15K~12AjG6c_B", //Generate Client Secret for Azure AD B2C  Product.WebClient 
+    "Instance": "https://example.b2clogin.com", //Replace 'tenant-name' with Azure AD B2C tenant name
+    "Domain": "example.onmicrosoft.com", //Replace 'tenant-name' with Azure AD B2C tenant name
+    "ClientId": "", //Azure AD B2C Products.WebClient App registration client id
+    "ClientSecret": "", //Generate Client Secret for Azure AD B2C  Product.WebClient 
     "SignedOutCallbackPath": "/signout/B2C_1_susi",
     "CallbackPath": "/signin",
     "SignupSigninPolicyId": "B2C_1_susi",
