--- a/SharpProg.Tutorials.AzureB2C/src/SharpProg.Tutorial.AzureB2C.Api/appsettings.json
+++ b/SharpProg.Tutorials.AzureB2C/src/SharpProg.Tutorial.AzureB2C.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://carbonx1.b2clogin.com", //Replace 'tenant-name' with Azure AD B2C tenant name
-    "Domain": "carbonx1.onmicrosoft.com", //Replace 'tenant-name' with Azure AD B2C tenant name 
-    "ClientId": "a56db7cd-ad4c-4da1-a70a-fd24a8430a57", //Azure AD B2C Products.Api app registration Application (client) ID
-    "Audience": "a56db7cd-ad4c-4da1-a70a-fd24a8430a57", //Same as Client Id 
+    "Instance": "https://b2cname.b2clogin.com", //Replace 'tenant-name' with Azure AD B2C tenant name
+    "Domain": "example.onmicrosoft.com", //Replace 'tenant-name' with Azure AD B2C tenant name 
+    "ClientId": "", //Azure AD B2C Products.Api app registration Application (client) ID
+    "Audience": "", //Same as Client Id 
     "SignupSigninPolicyId": "B2C_1_susi",
     "EditProfilePolicyId": "B2C_1_edit-profile",
     "ResetPasswordPolicyId": "B2C_1_reset_password"
