removed sensitive info form file

--- a/SharpProg.Tutorials.AzureB2C/src/SharpProg.Tutorials.AzureB2C.WebClient/appsettings.json
+++ b/SharpProg.Tutorials.AzureB2C/src/SharpProg.Tutorials.AzureB2C.WebClient/appsettings.json
@@ -13,8 +13,8 @@
   },
   "ProductApi": {
     "BaseAddress": "https://localhost:44352/",
-    "Url": "https://localhost:44352/api/products/get",
-    "ReadScope": "https://carbonx1.onmicrosoft.com/productsapi/products.view" //Replace 'tenant-name' with Azure AD B2C tenant name
+    "Url": "https://example:44352/api/products/get",
+    "ReadScope": "https://example.onmicrosoft.com/productsapi/products.view" //Replace 'tenant-name' with Azure AD B2C tenant name
   },
 
   "Logging": {
